[gd_scene load_steps=11 format=4 uid="uid://3hs2il4leyks"]

[ext_resource type="Texture2D" uid="uid://d2eyc106dhste" path="res://assets/brackeys_platformer_assets/sprites/world_tileset.png" id="1_mbj6s"]
[ext_resource type="Script" path="res://scripts/game_base.gd" id="1_mxyj4"]
[ext_resource type="PackedScene" uid="uid://cv30jni8jc36b" path="res://scenes/hazard_1.tscn" id="2_g3ysk"]
[ext_resource type="PackedScene" uid="uid://deitd64bd7qqx" path="res://scenes/player.tscn" id="2_q3i5o"]
[ext_resource type="PackedScene" uid="uid://mkigtmd6tj2b" path="res://scenes/hazard_2.tscn" id="3_fcjpk"]
[ext_resource type="PackedScene" uid="uid://by1vx5a716qwf" path="res://scenes/dialouge_box.tscn" id="3_vag2n"]
[ext_resource type="PackedScene" uid="uid://bwtcr4yo0iq4" path="res://scenes/hud.tscn" id="6_vimn4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c035p"]
texture = ExtResource("1_mbj6s")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_l44tj"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_c035p")

[sub_resource type="Curve2D" id="Curve2D_76i8d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2161.46, -449.859, 0, 0, 0, 0, -2185.88, 1361.11, 0, 0, 0, 0, 366.349, 1418.79, 0, 0, 0, 0, 305.291, -461.393, 0, 0, 0, 0, -2161.46, -449.859)
}
point_count = 5

[node name="gameBase" type="Node"]
script = ExtResource("1_mxyj4")
hazard1 = ExtResource("2_g3ysk")
hazard2 = ExtResource("3_fcjpk")
choiceWindow = ExtResource("3_vag2n")

[node name="map" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAD7/wAAAAABAAAAAAD7/wEAAAABAAAAAAD6/wEAAAABAAAAAAD6/wIAAAABAAAAAAD5/wIAAAABAAAAAAD5/wMAAAABAAAAAAD4/wMAAAABAAAAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wcAAAABAAAAAAD5/wgAAAABAAAAAAD5/wkAAAABAAAAAAD6/wkAAAABAAAAAAD6/woAAAABAAAAAAD6/wsAAAABAAAAAAD6/wwAAAABAAAAAAD6/w0AAAABAAAAAAD6/w4AAAABAAAAAAD6/w8AAAABAAAAAAD7/w8AAAABAAAAAAD8/w8AAAABAAAAAAD8/xAAAAABAAAAAAD9/xAAAAABAAAAAAD+/xAAAAABAAAAAAD//xAAAAABAAAAAAAAABAAAAABAAAAAAAAABEAAAABAAAAAAABABEAAAABAAAAAAACABIAAAABAAAAAAADABIAAAABAAAAAAAEABIAAAABAAAAAAAFABEAAAABAAAAAAAGABEAAAABAAAAAAAHABEAAAABAAAAAAAIABEAAAABAAAAAAAJABEAAAABAAAAAAAKABEAAAABAAAAAAALABEAAAABAAAAAAAMABEAAAABAAAAAAAMABIAAAABAAAAAAANABIAAAABAAAAAAAOABIAAAABAAAAAAAPABIAAAABAAAAAAAQABIAAAABAAAAAAARABIAAAABAAAAAAASABIAAAABAAAAAAATABIAAAABAAAAAAD8/wAAAAABAAAAAAD9/wAAAAABAAAAAAD9////AAABAAAAAAD+////AAABAAAAAAD+//7/AAABAAAAAAD///7/AAABAAAAAAAAAP7/AAABAAAAAAAAAP3/AAABAAAAAAABAP3/AAABAAAAAAACAP3/AAABAAAAAAADAP3/AAABAAAAAAAEAP3/AAABAAAAAAAFAP3/AAABAAAAAAAGAP3/AAABAAAAAAAHAP3/AAABAAAAAAAIAP3/AAABAAAAAAAJAP3/AAABAAAAAAAKAP3/AAABAAAAAAALAP3/AAABAAAAAAAMAP3/AAABAAAAAAANAP3/AAABAAAAAAAOAPz/AAABAAAAAAAPAPz/AAABAAAAAAAQAPz/AAABAAAAAAARAPz/AAABAAAAAAASAPz/AAABAAAAAAASAPv/AAABAAAAAAATAPv/AAABAAAAAAAUAPv/AAABAAAAAAAVAPv/AAABAAAAAAAWAPv/AAABAAAAAAAXAPv/AAABAAAAAAAYAPv/AAABAAAAAAAZAPv/AAABAAAAAAAaAPv/AAABAAAAAAAbAPv/AAABAAAAAAAcAPv/AAABAAAAAAAdAPv/AAABAAAAAAAeAPv/AAABAAAAAAAfAPz/AAABAAAAAAAgAPz/AAABAAAAAAAhAPz/AAABAAAAAAAiAPz/AAABAAAAAAAjAPz/AAABAAAAAAAkAPz/AAABAAAAAAAUABIAAAABAAEAAAAVABIAAAABAAEAAAAWABIAAAABAAEAAAAXABIAAAABAAEAAAAYABIAAAABAAEAAAAZABIAAAABAAEAAAAaABIAAAABAAEAAAAbABIAAAABAAEAAAAcABIAAAABAAEAAAAdABIAAAABAAEAAAAeABIAAAABAAEAAAAfABIAAAABAAEAAAAgABIAAAABAAEAAAAhABIAAAABAAEAAAAiABIAAAABAAEAAAAjABIAAAABAAEAAAAkABIAAAABAAEAAAAkABMAAAABAAEAAAAkABQAAAABAAEAAAAkABUAAAABAAEAAAAjABUAAAABAAEAAAAjABYAAAABAAEAAAAjABcAAAABAAEAAAAjABgAAAABAAEAAAAjABkAAAABAAEAAAAjABoAAAABAAEAAAAjABsAAAABAAEAAAAjABwAAAABAAEAAAAjAB0AAAABAAEAAAAiAB4AAAABAAEAAAAiAB8AAAABAAEAAAAiACAAAAABAAEAAAAiACEAAAABAAEAAAAuABMAAAABAAEAAAAuABQAAAABAAEAAAAuABUAAAABAAEAAAAuABYAAAABAAEAAAAuABcAAAABAAEAAAAtABgAAAABAAEAAAAtABkAAAABAAEAAAAtABoAAAABAAEAAAAtABsAAAABAAEAAAAtABwAAAABAAEAAAAtAB0AAAABAAEAAAAtAB4AAAABAAEAAAAtAB8AAAABAAEAAAAtACAAAAABAAEAAAAuACEAAAABAAEAAAAlAPX/AAABAAEAAAAlAPb/AAABAAEAAAAlAPf/AAABAAEAAAAlAPj/AAABAAEAAAAlAPn/AAABAAEAAAAlAPr/AAABAAEAAAAlAPv/AAABAAEAAAAlAPz/AAABAAEAAAAwAPz/AAABAAEAAAAwAPv/AAABAAEAAAAwAPr/AAABAAEAAAAwAPn/AAABAAEAAAAwAPj/AAABAAEAAAAvAPj/AAABAAEAAAAvAPf/AAABAAEAAAAvAPb/AAABAAEAAAAvAPX/AAABAAEAAAAvAPT/AAABAAEAAAAwAPT/AAABAAEAAAAwAPP/AAABAAEAAAAvABMAAAABAAEAAAAvABIAAAABAAEAAAAvABEAAAABAAEAAAAwABEAAAABAAEAAAAwABAAAAABAAEAAAAxABAAAAABAAEAAAAxAA8AAAABAAEAAAAyAA8AAAABAAEAAAAyAA4AAAABAAEAAAAzAA4AAAABAAEAAAAzAA0AAAABAAEAAAA0AA0AAAABAAEAAAA1AA0AAAABAAEAAAA2AA0AAAABAAEAAAA3AAwAAAABAAEAAAA4AAwAAAABAAEAAAA5AAwAAAABAAEAAAA6AAwAAAABAAEAAAA7AAwAAAABAAEAAAA8AAwAAAABAAEAAAA9AAwAAAABAAEAAAA+AAwAAAABAAEAAAA/AAwAAAABAAEAAABAAAwAAAABAAEAAABBAAwAAAABAAEAAABCAAwAAAABAAEAAABDAAwAAAABAAEAAABEAAwAAAABAAEAAABFAAwAAAABAAEAAABGAAwAAAABAAEAAAAwAP3/AAABAAEAAAAxAP3/AAABAAEAAAAxAP7/AAABAAEAAAAyAP7/AAABAAEAAAAyAP//AAABAAEAAAAzAP//AAABAAEAAAAzAAAAAAABAAEAAAA0AAAAAAABAAEAAAA0AAEAAAABAAEAAAA1AAEAAAABAAEAAAA2AAIAAAABAAEAAAA3AAIAAAABAAEAAAA4AAMAAAABAAEAAAA5AAMAAAABAAEAAAA6AAMAAAABAAEAAAA7AAMAAAABAAEAAAA8AAQAAAABAAEAAAA9AAQAAAABAAEAAAA+AAQAAAABAAEAAAA/AAQAAAABAAEAAABAAAQAAAABAAEAAABBAAQAAAABAAEAAABCAAQAAAABAAEAAABDAAMAAAABAAEAAABEAAMAAAABAAEAAABFAAMAAAABAAEAAABGAAMAAAABAAEAAABGAAQAAAABAAEAAABHAAQAAAABAAEAAAA=")
tile_set = SubResource("TileSet_l44tj")

[node name="player" parent="." instance=ExtResource("2_q3i5o")]
position = Vector2(187, 151)

[node name="choiceTimer" type="Timer" parent="."]

[node name="hazardTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="hazardPath" type="Path2D" parent="."]
position = Vector2(422, 171)
scale = Vector2(0.0818892, 0.0866939)
curve = SubResource("Curve2D_76i8d")

[node name="hazardSpawnLocation" type="PathFollow2D" parent="hazardPath"]
position = Vector2(-2161.46, -449.859)
rotation = 1.58428

[node name="startPosition" type="Marker2D" parent="."]
position = Vector2(188, 147)

[node name="hud" parent="." instance=ExtResource("6_vimn4")]

[connection signal="timeout" from="hazardTimer" to="." method="_on_hazard_timer_timeout"]
